shell/panelview: don't double count floatingPadding

When the panel is floating, geometryByDistance already adds
floatingPadding to both top and bottom. Don't double count it when
calculating the defloat geometry.

BUG: 482468
FIXED-IN: 6.0.4